Fixes issues with linking to specific page sections (#1264)
* fixes issue where links to specific sections from other pages was breaking

* makes internal link from hi/lo box a smooth scroll

* makes jumpToData a required prop

* fix styling

* rm comments

* remove hash from incoming link

* adds min height to reduce layout shift, hopefully fixes issue with links to refs

* adds minHeight to card components to minimize layout shift which in turn helps the scroll link be more vertically accurate

* move px values to tops of files as constants

* reduce cls

--- a/frontend/src/reports/Report.module.scss
+++ b/frontend/src/reports/Report.module.scss
@@ -29,6 +29,7 @@
   background-color: white;
   text-align: left;
   padding: 10%;
+  min-height: 900px;
 }
 
 .MissingDataContactUs {
